# board_game

./: .gitignore  CMakeLists.txt  README.md  doxyfile.doxy  game.txt  map_generator.py  r  rozkazy.txt  status.txt  status_tieto.txt
diagram/: diagram.drawio  przeplyw_main.drawio
inc/: Archer.hpp  Base.hpp  Catapult.hpp  Commander.hpp  Coordinates.hpp  Enemie_forces.hpp  Enemie_forces_analysis.hpp  File_parser.hpp  Floodfill.hpp  Game_state.hpp  Knight.hpp  Map.hpp  Map_field.hpp  Map_table.hpp  Ownership.hpp  Pikeman.hpp  Ram.hpp  Status.hpp  Swordsman.hpp  Type_of_unit.hpp  Unit.hpp  Worker.hpp
maps_and_status/: map_1.txt
src/: Archer.cpp  Base.cpp  Catapult.cpp  Commander.cpp  Enemie_forces_analysis.cpp  File_parser.cpp  Floodfill.cpp  Game_state.cpp  Knight.cpp  Map.cpp  Pikeman.cpp  Ram.cpp  Swordsman.cpp  Unit.cpp  Worker.cpp  main.cpp
tests/: CMakeLists.txt  enemie_forces_test.cpp  file_parser.test.cpp  floodfill_test.cpp  game.txt  game_state_test.cpp  mapa.txt  rozkazy.txt  status.txt
